--- a/ALZnote/docs/thought/suibi/202412.md
+++ b/ALZnote/docs/thought/suibi/202412.md
@@ -23,3 +23,20 @@
 - 不得不说，大环境对人的影响还是太大了。就谈谈束星北教授吧，他在上个世纪真是一个伟大的物理学家，拥有无比聪明的大脑，在现在绝对能为国家做出很大的贡献。无奈的是，他因为不喜欢搞政治那一套，性子又比较直，在最黑暗的十年被打成“右派”，迫不得已进行“改造”，当他回归正常生活时已经无法跟上物理学发展的节奏了。虽然如此，他依旧做出了很大的贡献。我为他的命运感到惋惜。我和他身上也有相似之处，我也反对甚至是厌恶给知识分子扣上一些本不属于他们的政治帽子，我认为这是对纯洁的知识的玷污。
 - 最近越来越喜欢读钱理群教授的文章了，从他的文章里能看出他对我们社会问题的反思，尤其是教育方面。钱老是专门研究鲁迅的，我认为他和鲁迅有很多相似之处的，都敢对社会的问题提出自己的见解，并且能够用文字表达出来。作为知识分子，理应用自己的方式为社会的发展做出自己的贡献，即使存在不被大多数人所理解，扣上“反动”帽子的风险。
 - 大环境对我的影响就是让我有了这些所思所感，哈哈。
+
+## 12.18
+- “独处”意味着，摆脱一切干扰，听不见任何杂音，就进入一种自由、自在、自悦的思辨状态。
+- 越长大越发现时间越来越不属于自己了，就算我已经提前规划好某件事，在这件事快要到来之时，总会有一些“意外情况”，最后计划泡汤。
+
+## 12.19
+- 人工智能时代我们应当学会“AI学习法”，有了AI的辅助决策能让我们变得更加高效，在短时间内收获高密度知识。
+- 觉得自己正在变得越来越麻木，越来越不像自己。
+
+## 12.21
+- 今天欣赏完《玩偶之家》这部戏剧，首先对于里面的每个人物都有了更加立体的认识。先前学习这篇课文的时候，光是听着老师分析人物性格，但却无法理解或者说给我的印象不是很直观，如今看完整部剧我对每个角色有了新的认知，也更能理解课本里出现的那些分析了。由此我在想，对于像我一样可能缺乏共情能力的人来说，语文课文出现的人物通过文字的表现力是有限的，如果通过演绎的方式进行展现会更加具有张力，让我真正体会到文学之美。这部剧真是让我大饱眼福，我的精神世界都变得充盈了。以后还会多多抓住机会的。
+
+## 12.23
+- Gavv真是令和假面骑士的神啊！
+
+## 12.25
+- 在图书馆学习突然想起以前在洛谷上看到的一句话：最痛苦的是上天给你了一定的天赋，足以窥探到天才世界，却不足以叩开天才的大门。其实我感觉我就属于这种人，但偏偏我以前又不是那么努力，还以“天才”自称，有点过于狂妄了，现在想想，如果当时再努力一把，加上又有一定的天赋，也不会沦落到如此地步。
