--- a/ALZnote/docs/thought/suibi/202501.md
+++ b/ALZnote/docs/thought/suibi/202501.md
@@ -10,3 +10,12 @@
 ## 2025.01.06
 - 2025年才刚刚开始，我就收到了令我心碎的消息。好朋友郭昕垒郭老师永远的离开了我们，生命是如此脆弱。没有一丝防备，就这么突然，一个年轻的生命悄然离去，为什么呢？为什么偏偏是郭老师？难道是天妒英才？！我无法接受。郭老师是一个很优秀的人，待人也很和善。因为我个人时间安排的原因，和他见面的次数并不是很多，上一次见面是在24年5月份，在一块一起吃了饭，几个月前，他还帮我从日本带回来了炮姐周边。我看着他带给我的东西，内心久久不能平静。长大以后，没有什么东西能让我非常难过到想流泪，唯独生死离别。我想，我应该如吴老师所说，带上他的眼睛，更好地珍惜生命，更加地热爱生活。斯人已逝，安息。
 - 我面对死亡时，会不会感到害怕？我认为现在的我是不惧怕死亡的，但是我无法接受我身边的人离开我。
+
+## 2025.01.12
+- 复习备考令我烦躁，最近也不知道自己想干嘛，一直在浪费时间，头大。虽然还是会花很多时间思考未来的事情，但还是觉得未来遥远又不可测，使我恐慌。可能我现在需要的是立马动手去做某件事情。
+
+## 2025.01.14
+- 对人类社会的有序发展来说，存在一群自由而独立的知识分子是至关重要的。罗素在《自由思想的十诫》中提出这样十点：（1）凡事不要抱绝对肯定的态度；（2）不要试图隐瞒证据，因为证据最终会被暴露；（3）不要害怕思考，因为思考总能让人有所补益；（4）有人与你意见相左时，即使这些意见来自你的丈夫或孩子，也应该用争论去说服他们，而不是用权威去征服，因为靠权威取得的胜利是虚幻而自欺欺人的；（5）不用盲目地崇拜任何权威，因为你总能找到相反的权威；（6）不要用权力去压制你认为有害的意见，因为如果你采取压制，其实只说明你自己受到了这些意见的压制；（7）不要为自己持独特看法而感到害怕，因为我们现在所接受的常识都曾是独特看法；（8）与其被动地同意别人的看法，不如理智地表示反对，因为如果你信自己的智慧，那么你的异议正表明了更多的赞同；（9）即使真相并不令人愉快，也一定要做到诚实，因为掩盖真相往往要费更大力气；（10）不要嫉妒那些在蠢人的天堂里享受幸福的人，因为只有蠢人才以为那是幸福。罗素总结的这十点大体上反映出了一个真正的知识分子所应有的必备条件，进而确定了真正知识分子对待现实社会的基本思维。由此，我们就可以理解真正的知识分子对现实社会以及自由资本主义为何持有鲜明的批判态度。有鉴于此，本文致力于对知识分子的社会责任、基本特质以及应有精神等进行学理性的剖析和阐述，由此来增进我们在这方面的认知。——《朱富强：知识分子的批判性和媒体知识分子的堕落：兼论知识分子何以反对资本主义》
+
+## 2025.01.20
+- 来北京旅游的第二天。昨天最主要还是参观了人民大会堂，故宫博物馆，天坛公园，吃到了全聚德烤鸭……而今天则是游览了一遍清北。就游览氛围而言，我更喜欢北大浓厚的古朴气息，多了一份宁静，而清华对我而言太过喧闹，不知道是不是游客的原因。清北作为中国top2高校，自然是受到国民乃至外国游客的关注，每天的预约参观的游客的数量远远超过上海交大。说实话，如果我是里面的学生，当然不希望自己的学校太多社会人员前来参观，可能会对教学秩序带来一定的影响，如果是其他大学的学生倒还好，毕竟整体素质还是比社会人员高上一大截。我原本的目的是感受一下不同学校的学风的，但可惜的是两所名校早已放假了，只能有机会再说了。今天的游览只是看到了清北表面的景观，对于我来说只是一次休闲吧。不过我以游客的视角看两所名校，终究还是比不过我所在的交大，因为呆在交大有自己的归属感，倒也缓解了我对名校的憧憬，适合自己的才是最好的。
