--- a/ALZnote/docs/thought/suibi/202502.md
+++ b/ALZnote/docs/thought/suibi/202502.md
@@ -5,3 +5,8 @@
 
 ## 2025.02.19
 - 我是真彻底不想呆在体制内了，我的思维完全融入不到里面。领导对于我来说就是贬义词，那新来的领导和老领导简直臭味相投啊，一来就对我们指手画脚。刚说没几句话，什么成分已经被大家分析清楚了。体制内会以各种什么条令条例来约束你，夸张点说，有时候就是在绑架你。我感觉在这里面呆着，人已经不能算是人了，还有一点自己的思想吗？这真是经历过文艺复兴的世界吗？干什么都要靠上级来传达，说难听点，有时候这上级也不知道干什么吃的，看起来就没有任何一点素养，没有任何一点领导力，唯一让我们屈服的（佩服那更别想）就是比我们多混了几年，有那么一点点权力。不过我现在也没什么话好讲了，全家都不知道问候过几遍了，也难解心头之恨。我对我自己的要求一定是要多学习知识，然后离开这里。我还有很多想做的事呢，比如去日本，学好电吉他和朋友一块演奏……先忍几年吧！
+  
+## 2025.02.27
+- 上述感想进一步加深。我青春很宝贵，没有这么多时间和这种人浪费在搞什么政治斗争上。满腔热血来，现在只渴求速速离开，究竟是什么造成的转变，我自己清楚。
+- 虽然头顶是乌云，眼前是黑暗，但我内心仍有明灯，指引我走下去。
+- 我就是追求个人自由发展的人，我不会再被别人道德绑架了，我的思想是自由的。
