--- a/ALZnote/docs/thought/suibi/202503.md
+++ b/ALZnote/docs/thought/suibi/202503.md
@@ -24,3 +24,6 @@
 ## 2025.03.15
 - 想写点什么，面对电脑时又大脑空空。内心复杂，却不知如何表达。
 - 每周的娱乐仅仅是看番。最近看少女乐队，总会被她们那种青春的感觉所打动，然而动画只是动画，现实里永远没有动画里这么美好，这么简单。但是我看番的时候经常把自己带入进去，有时候真是忍不住想哭。是羡慕？是对自己处境的不甘？还是为自己很多愿望实现不了而感到遗憾？好难过好窒息的感觉。
+
+## 2025.03.21
+- 对真理的追求之路是孤独的，不被人理解的，受制于环境的。但是我不愿安于现状。想像叶佬一样，从事教育行业，这也是我学习的动力所在。
