--- a/ALZnote/docs/thought/suibi/202503.md
+++ b/ALZnote/docs/thought/suibi/202503.md
@@ -27,3 +27,13 @@
 
 ## 2025.03.21
 - 对真理的追求之路是孤独的，不被人理解的，受制于环境的。但是我不愿安于现状。想像叶佬一样，从事教育行业，这也是我学习的动力所在。
+
+## 2025.03.23
+- 喜欢Live的一些原因:
+    - 我本身就非常享受音乐
+    - Live的现场感非常有氛围感，有青春感，让我热泪盈眶
+    - 动漫里追少女乐队番，里面的情节如此之纯粹让我动容，产生联想
+    - 少女乐队番的三次元乐队都是青春少女😀
+- 人生总是会有缺憾的，有时候鱼和熊掌的确不可兼得。如果不是现实痛苦的环境，我也没什么机遇看少女乐队番，也不会想到看Live。但是现在我处的环境让我找到了新的喜好，但矛盾点就在这里，我没法自由地去看Live了。总感觉这种局面无解呢。
+- 青木阳菜fmt在上海啊，可惜我抢不到票，不然我肯定会为青春花钱的。
+- 当我产生这种想法的时候真是会痛苦的。凌晨12点的时候看到在川崎圣地巡礼的视频，感觉心里闷闷的，我也很想去，但我真不知道何时才能去，或者说等我能去的时候，川崎已经发生了多大的改变了呢？
