--- a/ALZnote/docs/thought/suibi/202503.md
+++ b/ALZnote/docs/thought/suibi/202503.md
@@ -37,3 +37,7 @@
 - 人生总是会有缺憾的，有时候鱼和熊掌的确不可兼得。如果不是现实痛苦的环境，我也没什么机遇看少女乐队番，也不会想到看Live。但是现在我处的环境让我找到了新的喜好，但矛盾点就在这里，我没法自由地去看Live了。总感觉这种局面无解呢。
 - 青木阳菜fmt在上海啊，可惜我抢不到票，不然我肯定会为青春花钱的。
 - 当我产生这种想法的时候真是会痛苦的。凌晨12点的时候看到在川崎圣地巡礼的视频，感觉心里闷闷的，我也很想去，但我真不知道何时才能去，或者说等我能去的时候，川崎已经发生了多大的改变了呢？
+
+## 2025.03.04
+- 流体力学课有了新的点子，但是我没有及时记录，于是这个点子在材料力学课的时候就自然而然消逝了。引以为戒。
+- 佩服叶峻峣大佬对高效学习方法的追求。
