--- a/ALZnote/docs/thought/suibi/202503.md
+++ b/ALZnote/docs/thought/suibi/202503.md
@@ -38,6 +38,10 @@
 - 青木阳菜fmt在上海啊，可惜我抢不到票，不然我肯定会为青春花钱的。
 - 当我产生这种想法的时候真是会痛苦的。凌晨12点的时候看到在川崎圣地巡礼的视频，感觉心里闷闷的，我也很想去，但我真不知道何时才能去，或者说等我能去的时候，川崎已经发生了多大的改变了呢？
 
-## 2025.03.04
+## 2025.03.24
 - 流体力学课有了新的点子，但是我没有及时记录，于是这个点子在材料力学课的时候就自然而然消逝了。引以为戒。
 - 佩服叶峻峣大佬对高效学习方法的追求。
+
+## 2025.03.30
+- 现在泪点变得好低啊，每每反复听《天球のMujica》总会被泪水蒙蔽双眼，音乐对于我的意义还是太重大了，我不能没有音乐，否则我就没法快乐地活着。
+- 仍然在探索我生活，学习的意义中。
