--- a/ALZnote/docs/thought/suibi/202504.md
+++ b/ALZnote/docs/thought/suibi/202504.md
@@ -2,3 +2,9 @@
 
 ## 2025.04.06
 - 热情是消耗品，会不断地被周遭环境消耗。
+
+## 2025.04.23
+- 转眼间就到4.23日了，这几周真是魔鬼周，事情很多，时间很少，都只能压缩睡眠时间来完成课业以及自己的任务，大约的确是有些破防。
+- 世界读书日，意义重大。读过的书都会反映到一个人的精神气质上，与读书多的人交流，便是学习的过程，能汲取到十足的精神养料，这是我非常渴求的；而与不读书的人交流犹如对牛弹琴，面对对方无理取闹或者无脑的要求，的确非常痛苦，不过这也反映出我读的书不够多，对某些人不够包容。
+- 明天流体力学期中，复习并不充分。因为鱼和熊掌不可兼得，便不强求自己，和自己和解，随遇而安。
+- 正如今天读书分享会中一位分享者所说：有时候做一件事没有成功，并不是因为能力不行，而是因为没有把这份激情坚持下去。
