--- a/ALZnote/docs/thought/suibi/202505.md
+++ b/ALZnote/docs/thought/suibi/202505.md
@@ -4,3 +4,13 @@
 - 四月异常的忙，经常把自己逼到极限，感觉已经崩溃了好几次。
 - 终于迎来五一假期，这次真的能放松吗？
 - 人生不能没有音乐啊。
+
+## 2025.05.05
+摘自《优秀的绵羊》：
+
+- 教育是当你忘记了所学的一切之后所存活下来的那一部分。
+- 追求大学的使命是什么，无异于追寻生命的目的，即社会存在的意义以及人存在的意义
+- 之所以我们要去探究大学的目的是什么，就是因为我们要保证自己至少还能够成为一个完整的人。
+- 大学承担的责任首先是教给学生如何思考。简单来讲，学会思考就是以批判的眼光审视身边任何事物，不自以为是，不妄下结论。
+- 哥伦比亚大学教授马克·里拉(Mark Lila)更强烈地建议，我们必须考虑，“到底什么是值得追求的”。不仅仅是思考自己到底想要成为什么样的人，而且首先要明白自己已经是个什么样的人，不管其他人怎么评论你，我们要做的就是要勇于发现新的理想和新的追求。两个极具智慧的问题，等着我们回答:(1)什么是优质的生活?(2)我该如何拥有那样的生活?
+- 在《高等教育》的一篇文章中，作者安德鲁,海克和克劳迪娅:德雷福斯阐述，大学的使命是成就一个更有意思的你。一个人之所以有意思，是因为他大量阅读，习惯思考，放缓脚步，投入深度对话，并为自己创建了一个丰满的内心世界。
