--- a/ALZnote/docs/thought/suibi/202505.md
+++ b/ALZnote/docs/thought/suibi/202505.md
@@ -14,3 +14,11 @@
 - 大学承担的责任首先是教给学生如何思考。简单来讲，学会思考就是以批判的眼光审视身边任何事物，不自以为是，不妄下结论。
 - 哥伦比亚大学教授马克·里拉(Mark Lila)更强烈地建议，我们必须考虑，“到底什么是值得追求的”。不仅仅是思考自己到底想要成为什么样的人，而且首先要明白自己已经是个什么样的人，不管其他人怎么评论你，我们要做的就是要勇于发现新的理想和新的追求。两个极具智慧的问题，等着我们回答:(1)什么是优质的生活?(2)我该如何拥有那样的生活?
 - 在《高等教育》的一篇文章中，作者安德鲁,海克和克劳迪娅:德雷福斯阐述，大学的使命是成就一个更有意思的你。一个人之所以有意思，是因为他大量阅读，习惯思考，放缓脚步，投入深度对话，并为自己创建了一个丰满的内心世界。
+
+## 2025.05.16
+- 做出与众不同的选择需要勇气，不要在意他人的目光，不要优柔寡断，遵从自己的内心。
+- 内心力量尚且还不够强大，多去阅读，坚定自己的想法。
+- 我何时才能像nina一样证明我自己是对的？
+- 走出舒适区是一件很困难的事情，这也是很多人很难做出改变的原因之一。
+- 我对于学习还需要认知更全面一些。
+- 并不想参与无意义的内卷，并不想在意分数。但这却是我获得资源，证明“学历”的唯一途径，为了分数学习是痛苦的，但在这个社会里似乎又很难脱离这个现实问题。我必须尽可能保持本心。
