--- a/ALZnote/docs/thought/suibi/202505.md
+++ b/ALZnote/docs/thought/suibi/202505.md
@@ -22,3 +22,6 @@
 - 走出舒适区是一件很困难的事情，这也是很多人很难做出改变的原因之一。
 - 我对于学习还需要认知更全面一些。
 - 并不想参与无意义的内卷，并不想在意分数。但这却是我获得资源，证明“学历”的唯一途径，为了分数学习是痛苦的，但在这个社会里似乎又很难脱离这个现实问题。我必须尽可能保持本心。
+
+## 2025.05.26
+- 把一门硬课安排在短短16周，并且一周只有一节或者两节课，要学透是十分困难的。指望学生学明白学懂是及其不科学的，所以就只能走在应试教育的道路上。真想要学习东西，只能靠自己额外安排时间。
