--- a/ALZnote/docs/thought/suibi/202505.md
+++ b/ALZnote/docs/thought/suibi/202505.md
@@ -25,3 +25,6 @@
 
 ## 2025.05.26
 - 把一门硬课安排在短短16周，并且一周只有一节或者两节课，要学透是十分困难的。指望学生学明白学懂是及其不科学的，所以就只能走在应试教育的道路上。真想要学习东西，只能靠自己额外安排时间。
+
+## 2025.05.30
+- 感觉自己现在是支离破碎的。因为自己推翻了自己原有的很多观念，打破了很多惯性思维、固有思维，一下子有些迷茫。在迷茫中前进。
