--- a/ALZnote/docs/Note/Refold/0/0C.md
+++ b/ALZnote/docs/Note/Refold/0/0C.md
@@ -23,3 +23,18 @@
 - 建议选择已主动沉浸过的内容进行被动收听，重复可使大脑有更多机会深入吸收和分析语音与词汇，对语言学习有积极作用。
 - 尽管重复可能让人觉得乏味，但被动收听这种方式能让大脑在相对无感的状态下再次接触这些内容，避免因重复产生的厌烦情绪影响学习。
 - 期被动收听可能会有大量内容听不懂，此时容忍模糊感并坚持下去至关重要。听已观看过的内容，即便当下听不懂语言，也能凭借记住的故事情节保持兴趣。随着学习深入，词汇量和听力能力提升，对收听内容的理解会更深刻，最终能听懂全新内容。
+
+## 0C3:主动非沉浸学习
+
+### 记忆对语言习得的三种助力方式
+- 一是启动效应，大脑为新学单词在 “心理字典” 开辟词条，使大脑在沉浸学习中更易注意该词，通过多次接触积累信息，推测其含义与用法，类似买新车后常看到同款车的 “频率错觉”。
+- 二是理解，记住单词含义为心理字典词条添加定义，让接收的输入更易理解，从而促进语言习得。
+- 三是记忆保持，遗忘是大脑的自然现象，需不时刷新强化信息，习得的词汇对大脑 “修剪机器” 有抵抗能力，不常接触的词汇可能在习得前被删除，偶尔复习有助于保留词汇，且为让词汇留在长期记忆，每年需复习一次左右。
+
+### 智能的记忆方法
+- 间隔重复系统（SRS）能智能预测遗忘时间，在遗忘前提醒复习，巩固记忆。首次学习新单词时，记忆较弱，SRS 展示频率高，随着记忆增强，展示频率降低，最终一年或更少次数的复习就能让单词牢固记忆。
+
+### Anki:首选的间隔重复系统
+- Anki 是基于 SRS 原理的电子抽认卡程序，使用分学习新卡片和复习旧卡片。记单词先在 Anki 添加新卡片，设定每日学习新卡片数量，学会后卡片变为复习卡。
+- Anki 会生成可能遗忘的卡片组，学习者无法控制每天复习数量，需持之以恒复习。
+- 同时，Anki 算法虽能预测遗忘但不绝对，需学习者给出记忆反馈，依据反馈调整下次展示间隔，记忆保留率在 80% - 90% 为优秀。
