--- a/ALZnote/docs/thought/suibi/202506.md
+++ b/ALZnote/docs/thought/suibi/202506.md
@@ -17,3 +17,8 @@
 ## 2025.06.16
 - PPP官宣8.23要来上海开live，但是我没法去，内心非常不甘也很遗憾，虽然我能尽量克制住这种感觉，但每每想起还是会很痛苦。一种身不由己的感觉。
 - 写这样的感想也是为了帮助自己排解一部分痛苦的情绪吧，我知道我改变不了环境，只能无奈接受。
+
+## 2025.06.19
+- 期末考试考完两天了，我完全没有放松的感觉，也不是很敢放松，我怕我的放松打乱我的学习进度，从而影响我未来的抉择。
+- 想沉浸学习日语好难，我的心态上还是没有完全接受Refold方法，导致我在沉浸的过程中有些焦虑，这个还是得靠我自己慢慢改变。
+- 晚上趁着沉浸时光重温《某科学的超电磁炮》，开头的切入一下子把我拉回初中看番的美好时光。我想起来在某个周末，从早上一直看番看到晚上，除了吃饭睡觉时间就是在追番，往往一两天就能看完一部十二到二十四集的番；我想起了我Github的御坂美琴头像是我用的最早的二次元头像，我的bilibili头像是白井黑子，多少年了，到现在都没有更换；我也想起每看完一季超电磁炮带来怅然若失的感觉，以及在20年上高中看到超电磁炮出续作的喜悦。这些感觉，自从我上大学以后就从来没体验过了吧？也许这些美好只存在于回忆的那一瞬间了吧。
